--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -20,14 +20,20 @@
 		<form method="post" action="/employee/checkList/update"  enctype="multipart/form-data">
 			<input type="hidden" th:value="${ checkList.checkReservationNo }" class="reservationNo" name="reservationNo">
 			
-			<p th:utext="${ checkList.checkHTML }" class="jbHtml"></p>			
-			
-			<div class="content-img-area1" id="contentImgArea1">
-				<img id="beforeImg" width="100" height="120">
-			</div>
-			<div class="content-img-area2" id="contentImgArea2">
- 	        	<img id="afterImg" width="100" height="120">
-			</div>
+			<p th:utext="${ checkList.checkHTML }" class="jbHtml"></p>	
+					
+			<table style ="margin-left: 35%">
+				<tr >
+					<td class="content-img-area1" id="contentImgArea1">
+						<h5 align="center"> Before</h5>
+						<img id="beforeImg" width="200" height="180" >
+					</td>
+					<td class="content-img-area2" id="contentImgArea2">
+						<h5 align="center"> After</h5>
+ 	        			<img id="afterImg" width="200" height="180">
+ 	        		</td>
+				</tr>
+			</table>
 			
 			<div class="thumbnail-file-area">
 		        <input type="file" id="thumbnailImg1" name="beforeThumbnailImg" onchange="loadImg(this,1)" style="display: none">
@@ -35,17 +41,20 @@
 			</div>
 			<br><br>				
 			
-            <div style="width:300px; height:300px;">    
+            <div style="width:300px; height:300px; margin-left: 40%" id="contentImgArea3">     
                 <canvas id="canvas" style="border:1px solid black"></canvas>  
-            </div> 
-            <div class="canvasbtn">    
-	        	<button id="reset" class="savebtn col-xl-3">취소</button>
-	        </div> 
-	       
-			<input type="button" id="submitButton" value="test">	        
+	        	<img id="signImg" width="300px; height:300px; margin-left: 40%">
+	        	<!-- <input type ="file" id="thumbnailImg3" name="signThumbnailImg" onchange="loadImg(this,3)" style="display: none"> -->
+	        </div> 	
 
 		</form>
 	</section>
+	
+	<br><br><br><br>
+	
+	<button id="save"  type="button">서명 저장</button>
+    <button id="reset"  type="button">서명 취소</button>
+	<input type="button" id="submitButton" value="제출" style="margin-left: 50%">	        
 	 	
 	<!-- submit script -->
     <script>
@@ -54,7 +63,6 @@
     	document.getElementById("submitButton").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
     			const jbHtml = $( 'section' ).html();
-    			console.log(jbHtml)
     		if(confirm("체크리스트를 전송하시겠습니까?")){
     			$.ajax({
     				url: "/employee/checkList/update",
@@ -75,11 +83,14 @@
     	}
 
     </script>	 	
-
+			</div>	
+			
+			
 	<!-- fileupload script -->
 	<script>
 	const $contentImgArea1 = document.getElementById("contentImgArea1");
 	const $contentImgArea2 = document.getElementById("contentImgArea2");
+	const $contentImgArea3 = document.getElementById("contentImgArea3");
 	
 	$contentImgArea1.onclick = function() {
 				document.getElementById("thumbnailImg1").click();
@@ -102,6 +113,9 @@
 						break;
 					case 2:
 						document.getElementById("afterImg").src = e.target.result;
+						break;
+					case 3:
+						document.getElementById("signImg").src = e.target.result;
 						break;
 				}
 								
@@ -170,7 +184,7 @@
 		                                case "mousemove":{            
 		                                    if(drawble){              
 		                                        ctx.lineTo(getPosition().X, 
-		                                        getPosition().Y);              
+		                                        getPosition().Y);              	
 		                                        ctx.stroke();            
 		                                    }          
 		                                }          
@@ -194,8 +208,12 @@
 		
 		                            // save 버튼을 누르면 imageupload.php로 base64코드를 보내서 이미지로 변환합니다.          
 		                            
-		                            $("#save").on("click", function(){            
-		                                // a 태그를 만들어서 다운로드를 만듭니다.            
+		                            $("#save").on("click", function(){     
+		                            	console.log("작동")
+		                            	var canvas = document.getElementById('canvas')
+		                            	var dataURL = canvas.toDataURL();
+		                            	console.log(dataURL)
+		        /*                         // a 태그를 만들어서 다운로드를 만듭니다.            
 		                                var link = document.createElement('a');             
 		                                // base64데이터 링크 달기            
 		                                link.href = canvas[0].toDataURL("image/png");             
@@ -206,7 +224,7 @@
 		                                link.click();             
 		                                document.body.removeChild(link);             
 		                                // 다운로드용 a 태그는 다운로드가 끝나면 삭제합니다.            
-		                                form.remove();          
+		                                form.remove();      */     
 		                            });        
 		                            
 		                            $("#reset").on("click", function(){
