--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-	<div th:include="common/Header.html"></div>
+	<div th:include="common/header.html"></div>
 	<div th:include="common/hrAside.html"></div>
 	
 	<button onclick="history.back()">Back</button>
