--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminList.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-	<div th:include="common/Header.html"></div>
+	<div th:include="common/header.html"></div>
 	<div th:include="common/hrAside.html"></div>
 	<div class="container">
 	
