--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -103,9 +103,9 @@
                 		</th:block>
                 		<th:block sec:authorize="hasRole('EMPLOYEE')">
                 			<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/employee/task/selectMyTask">신청 업무 조회</a></li>
+                                <li><a class="dropdown-item" href="/employee/checkList/selectMyCheckList">신청 업무 조회</a></li>
                                 <li><a class="dropdown-item" href="/employee/checkList/insert">체크리스트 작성</a></li>
-                                <li><a class="dropdown-item" href="#">보류 체크리스트 조회</a></li>
+                                <li><a class="dropdown-item" href="/employee/checkList/denial/select">보류 체크리스트 조회</a></li>
                                 <li><a class="dropdown-item" href="#">완료 체크리스트 조회</a></li>
                             </ul>
                 		</th:block>
