--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<div th:include="common/header.html"></div>
+	<div th:include="common/checkListAside.html"></div>
 
 	<script>
 		const resultMessage = "[[${Message}]]";
