--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-	<div th:include="common/Header.html"></div>
+	<div th:include="common/header.html"></div>
 	<div th:include="common/hrAside.html"></div>
 
 	<button onclick="history.back()">Back</button>
