--- a/com-project-clean/src/main/resources/templates/common/checkListAside.html
+++ b/com-project-clean/src/main/resources/templates/common/checkListAside.html
@@ -21,7 +21,7 @@
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                 	<th:block sec:authorize="hasRole('ADMIN')">
                     	<li><a class="dropdown-item" href="/admin/checklist/select">미처리 체크리스트 조회</a></li>
-                     	<li><a class="dropdown-item" href="#">완료 체크리스트 조회</a></li>
+                     	<li><a class="dropdown-item" href="/admin/checklist/accept/select">완료 체크리스트 조회</a></li>
                      	<li><a class="dropdown-item" href="/admin/checklist/denial/select">반려 체크리스트 검토</a></li>
                      </th:block>
                      <th:block sec:authorize="hasRole('EMPLOYEE')">
