--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -97,8 +97,8 @@
                 		<th:block sec:authorize="hasRole('ADMIN')">
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="/admin/checklist/select">미처리 체크리스트 조회</a></li>
-                                <li><a class="dropdown-item" href="#">완료 체크리스트 조회</a></li>
                                 <li><a class="dropdown-item" href="/admin/checklist/denial/select">반려 체크리스트 검토</a></li>
+                                <li><a class="dropdown-item" href="/admin/checklist/accept/select">완료 체크리스트 조회</a></li>
                             </ul>
                 		</th:block>
                 		<th:block sec:authorize="hasRole('EMPLOYEE')">
