--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -23,10 +23,12 @@
 		
 		  <th:block th:if="${ checkList.checkStatus == 'D' }">	
 		  
-	        <div class="employeeOpnionArea">
-	            <label>직원 답변</label><br>
-	            <textarea class="Opnion" cols="100%" rows="3"></textarea>
-	            <br>
+	        <div class="OpnionArea">
+		        <div class="employeeOpnionArea">
+	   	        	<label>직원 답변</label><br>
+	    	        <textarea id="employeeOpnion" class="Opnion" maxlength="300"></textarea>
+		        	<textarea id="employeeOpnion2" class="Opnion" maxlength="300" style="display: none"></textarea>
+			    </div>
 	    	</div>
 	    	
 	    </th:block>
@@ -35,9 +37,22 @@
 </section>
 
 	<th:block th:if="${ checkList.checkStatus == 'D' }">	
-	    <input type="button" value="등록" id="submit">
+	    <input type="button" value="등록" id="submit" class="submittbtn">
 	</th:block>
 	
+	
+<!--  textarea script -->
+<script>
+	
+		$("#adminOpnion").prop("readonly", true);
+		$("#adminOpnion2").prop("readonly", true);
+		
+		$('textarea').keyup(function(){
+		var letter = $(this).val()
+		$('#employeeOpnion2').html(letter)
+	})
+	
+</script>	
 <!-- Submit script -->
     <script>
 	    
@@ -45,8 +60,12 @@
     	
     	document.getElementById("submit").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
-    			const jbHtml = $( 'section' ).html();
     		if(confirm("사유서를 제출하시겠습니까? 담당 관리자에게 알람이 전송됩니다.")){
+    			
+    			document.getElementById("employeeOpnion").remove();
+    			document.getElementById("employeeOpnion2").style="";
+    			const jbHtml = $( 'section' ).html();
+
     			$.ajax({
     				url: "accpet",
     				type:"POST",
