--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
@@ -62,10 +62,6 @@
 						$tr.append($paymentTd);
  						$tr.append($buttonTd); 
 						$table.append($tr);
-						var startTime = new Date();
-						startTime = data[index].businessStartTime;
-						console.log("업무 시작 시간 : " + startTime)
-						console.log(typeof(startTime))
 					};
 				},
 				error:function(error){
@@ -78,14 +74,26 @@
 				
 				for(let i = 0; i < buttons.length; i++) {
 					
+					const nowDay = nowtime.toString().substring(8, 10);
 					nowtime.setMinutes(nowtime.getMinutes() - 30)
-					const nowtime2 = nowtime.toString().substring(15, 21);
+					const nowHours = nowtime.toString().substring(15, 21);
+					nowtime.setMinutes(nowtime.getMinutes() + 60)
+					const maxHours = nowtime.toString().substring(15, 21);
+					
+					console.log(nowDay)
+					console.log(nowHours)
+					console.log(maxHours)
 					
 					const button = buttons[i];
+					
 					button.onclick = function() {
-						const timer = button.parentNode.querySelector('.st').innerText.substring(10, 16);
 						
-						if(timer < nowtime2){
+						const businessStartDay = button.parentNode.querySelector('.st').innerText.substring(8, 10)
+						const businessStartHours = button.parentNode.querySelector('.st').innerText.substring(10, 16);
+						
+						if(nowDay == businessStartDay){
+							console.log(businessStartHours)
+							/* if(businessStartHours > nowHours && businessStartHours < maxHours){ */
 							
 								const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
 								const resNo2 = resNo1[i];
@@ -95,10 +103,15 @@
 								console.log(resNo2)
 								console.log(resNo3)
  							 	location.href="/employee/checkList/start?re="+ resNo3;
-							
 						} else{
+							
 							alert("업무를 시작할 수 없습니다. ")
-						}; 
+						};
+							
+						/* } else{
+							
+							alert("업무를 시작할 수 없습니다. ")
+						};  */
 					}						
 
 				}
