--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -27,7 +27,8 @@
 	        <th:block sec:authorize="hasRole('ADMIN')">
 		        <div class="adminOpnionArea">
 		            <label>관리자 의견</label><br>
-	            	<textarea class="Opnion" cols="100%" rows="3" required></textarea>
+		            <textarea id="adminOpnion" class="Opnion" maxlength="300"></textarea>
+		            <textarea id="adminOpnion2" class="Opnion" maxlength="300" style="display: none"></textarea>
 	            	<br>
 		        </div>
 			</th:block>
@@ -39,14 +40,29 @@
 <input type="button" value="승인" id="accept">
 <input type="button" value="거절" id="denial">
 
+<!-- OpnionArea script -->
+<script>
+	
+	$('textarea').keyup(function(){
+		var letter = $(this).val()
+		$('#adminOpnion2').html(letter)
+	})
+
+</script>
 <!-- Submit script -->
     <script>
 	    
 	    const jbHtml = "";
     	document.getElementById("denial").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
-    			const jbHtml = $( 'section' ).html();
+			
     		if(confirm("서류를 반려하시겠습니까? 직원에게 알람이 전송됩니다.")){
+    			
+    			document.getElementById("adminOpnion").remove();
+    			document.getElementById("adminOpnion2").style="";
+    			
+    			const jbHtml = $( 'section' ).html();
+    			
     			$.ajax({
     				url: "denial",
     				type:"POST",
@@ -67,9 +83,16 @@
     	}
     	
     	document.getElementById("accept").onclick = function(){
+    		
 			const reservationNo = $('.reservationNo').val();
-    			const jbHtml = $( 'section' ).html();
+			
     		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
+    			
+    			document.getElementById("adminOpnion").remove();
+    			document.getElementById("adminOpnion2").style="";
+    			const jbHtml = $( 'section' ).html();
+    			
+    			
     			$.ajax({
     				url: "accept",
     				type:"POST",
@@ -108,8 +131,6 @@
 		};
 
 </script>
-
-
 
 </body>
 </html>
